# MODULE.bazel
bazel_dep(name = "rules_python", version = "0.40.0")

python = use_extension("@rules_python//python:extensions.bzl", "python")

python.toolchain(
    name = "python3_11_host",
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "my_pip_deps",
    requirements_lock = "//:requirements.txt",
    python_version = "3.11",
)

use_repo(pip, "my_pip_deps")
use_repo(python, "python3_11")